// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should render the component using default props with placeholder 'Aadhaar Number' 1`] = `
<DocumentFragment>
  <input
    class="disabled:text-preFillText p-3 w-full rounded-lg shadow-textBox bg-textBox"
    placeholder="Aadhaar Number"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`TextBox should render the component using props for fixed text and placeholder as 'Health ID' 1`] = `
<DocumentFragment>
  <div
    class="input-box"
  >
    <input
      class="disabled:text-preFillText p-3 w-full rounded-lg shadow-textBox bg-textBox partial-input"
      placeholder="Health ID"
      style="padding-right: 6.25rem;"
      type="text"
      value=""
    />
    <span
      class="fixed-text text-preFillText"
    >
      .ayush@sbx
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render the component using props for no bg colour and placeholder as 'Aadhaar Number' 1`] = `
<DocumentFragment>
  <input
    class="disabled:text-preFillText p-3 w-full rounded-lg shadow-textBox "
    placeholder=""
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`TextBox should render the component using props with disabled as true and text 'Aadhaar Number' 1`] = `
<DocumentFragment>
  <input
    class="disabled:text-preFillText p-3 w-full rounded-lg shadow-textBoxInset bg-textBox"
    disabled=""
    placeholder=""
    type="text"
    value="Aadhaar Number"
  />
</DocumentFragment>
`;

exports[`TextBox should render the component using props with text 'Aadhaar Number' 1`] = `
<DocumentFragment>
  <input
    class="disabled:text-preFillText p-3 w-full rounded-lg shadow-textBox bg-textBox"
    placeholder=""
    type="text"
    value="Aadhaar Number"
  />
</DocumentFragment>
`;
